# ChangeLog for net-p2p/nativebiginteger
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  nativebiginteger-0.6.1.31.ebuild:
  Add blocker for previous location

  20 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  nativebiginteger-0.6.1.31.ebuild:
  No RDEPEND on JRE

  03 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  nativebiginteger-0.6.1.31.ebuild:
  Update dependencies, thanks to bonsaikitten

  01 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> files/Makefile:
  Prevent potential install error

  30 Mar 2008; Thomas Sachau (Tommy[D]) tommy@gentoo.org
  nativebiginteger-0.6.1.31.ebuild, files/Makefile:
  Added amd64 keyword, cleanup

  26 Feb 2008; (Tommy[D]) tommy100@gmx.de +nativebiginteger-0.6.1.31.ebuild,
  +files/Makefile, +metadata.xml:
  New lib for net-p2p/freenet (bug #128783), moved out of freenet to compile
  native one
