@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  nativebiginteger-0.6.1.31.ebuild:
+  Add workaround for system-vm=jre
+
   20 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   nativebiginteger-0.6.1.31.ebuild:
   Add blocker for previous location
